third_party/move/move-compiler-v2/tests/checking/specs/use_erroneous_schema.exp

Diagnostics:
error: undeclared `x`
  ┌─ tests/checking/specs/use_erroneous_schema.move:5:17
  │
5 │         ensures x > 0;
  │                 ^

error: cannot use `bool` with an operator which expects a value of type `num`
   ┌─ tests/checking/specs/use_erroneous_schema.move:13:21
   │
13 │         ensures 2 < true;
   │                     ^^^^
